<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical"
        android:padding="5sp" >

        <LinearLayout
            android:id="@+id/tokenAddStep1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tokenType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tokenType" >
            </TextView>

            <Spinner
                android:id="@+id/tokenTypeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/tokenTypeSpinnerPrompt" >
            </Spinner>

            <TextView
                android:id="@+id/tokenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tokenName" >
            </TextView>

            <EditText
                android:id="@+id/tokenNameEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:id="@+id/tokenSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tokenSerial" >
            </TextView>

            <EditText
                android:id="@+id/tokenSerialEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="vertical" >
                    
	                <TextView
	                    android:id="@+id/tokenOtp"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="0.61"
	                    android:text="@string/tokenOtp" />
	                
	                <Spinner
	                    android:id="@+id/tokenOtpSpinner"
	                    android:layout_width="147dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:entries="@array/otpLength"
	                    android:prompt="@string/tokenOtpSpinnerPrompt" />
		                
                </LinearLayout>
                <LinearLayout 
                    android:layout_width="wrap_content"
                    android:id="@+id/totpSpecific"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
		                
	                <TextView
	                    android:id="@+id/tokenOtpQuantum"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/tokenOtpQuantum" />
	                
	                <Spinner
	                    android:id="@+id/tokenOtpQuantumSpinner"
	                    android:layout_width="147dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:entries="@array/otpQuantum"
	                    android:prompt="@string/tokenOtpSpinnerPrompt" />
	                
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnAddStep2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOK" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>